infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authen-service
spec:
  type: ClusterIP
  selector:
    app: authen
  ports:
    - port: 80
      targetPort: 8080
